Layout bug fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 html {
 	position: relative;
 	min-height: 100%;
-	transition: 1s;
+	transition: 1s ease;
 }
 
 body {
@@ -19,49 +19,18 @@ body {
 	overflow-y: scroll;
 }
 
-body:not([data-scroll='0']) {
-	padding-top: 50px;
-}
-
 /**
  * Header
  */
 
-body[data-scroll='0'] .navbar-default {
-	font-size: 1.3em;
+
+body .cover-header .img-responsive {
+	transition: 1s ease;
+	height: 288px;
+	width: 100%;
 }
 
-body:not([data-scroll='0']) .navbar-default {
-	font-size: 1em;
-	min-height: 50px;
-}
-
-body:not([data-scroll='0']) .fa {
-	font-size: 18px;
-}
-
-body:not([data-scroll='0']) .navbar-brand {
-	font-size: 18px;
-	height: 50px;
-	padding-top: 16px;
-}
-
-body:not([data-scroll='0']) .navbar-nav > li > a {
-	line-height: 18px;
-	padding-top: 16px;
-	padding-bottom: 16px;
-}
-
-.img-responsive {
-	transition: 3s;
-}
-
-body:not([data-scroll='0']) .cover-header .img-responsive {
-	height: 0px;
-	width: auto;
-}
-
- .navbar-default {
+.navbar-default {
 	background-color: #444444;
 	border-color: #556C81;
 }
